# twitcord-rs

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Terms of Service.md  test.py
.github/workflows/: docker-image.yml
locales/: en.yml  zh-CN.yml  zh-TW.yml
src/: commands.rs  main.rs  oauth.rs  utils.rs
src/command/: connect.rs  disconnect.rs  invite.rs  mod.rs  support.rs
src/commands/: connect.rs
src/core/: cache.rs  mod.rs  oauth.rs  utils.rs
