[package]
name = "twitcord-rs"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 4
opt-level = "s"


[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "builder",
  "client",
  "collector",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend"
]

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.17"

[dependencies.sha1]
version = "0.10.5"

[dependencies.hmac]
version = "0.12.1"
features = ["reset"]

[dependencies.hyper]
version = "0.14.26"
features = ["client", "http1", "runtime", "tcp"]

[dependencies.hyper-rustls]
version = "0.24.0"

[dependencies.urlencoding]
version = "2.1.2"

[dependencies.base64]
version = "0.21.2"

[dependencies.rand]
version = "0.8.5"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.flate2]
version = "1.0.26"

[dependencies.itertools]
version = "0.10.5"

[dependencies.regex]
version = "1.8.3"

[dependencies.anyhow]
version = "1.0.71"

[dependencies.rust-i18n]
version = "1.2.1"
